--- a/src/styles/Root.scss
+++ b/src/styles/Root.scss
@@ -1,7 +1,7 @@
 @import "../styles/variables";
 
 .global-container {
-  background-color: white;
+  background-color: #fafafa;
   height: 100%;
   &.dark-mode {
     background-color: #202c36;
